改造项目以便能够部署到cloudflare vercel中

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,67 @@
-# Gemini API Configuration
-VITE_GEMINI_API_KEY=
+# ===============================
+# Nano Banana Editor API 配置
+# ===============================
 
-# Note: In production, API calls should go through a backend proxy
-# This is for development and demonstration purposes only
+# API 密钥 - 必填
+# 用于访问AI图像生成服务的API密钥
+VITE_GEMINI_API_KEY=your_api_key_here
+
+# API Token - 可选（高级认证）
+# 用于Authorization头部的令牌值，优先级高于API密钥
+# 支持多种格式：
+# - Bearer Token: Bearer your_token_here
+# - 直接Token: your_token_here
+# - Cookie认证: SAPISID=xxx; HSID=yyy
+VITE_API_TOKEN=
+
+# API 基础地址 - 可配置
+# 默认使用Google Gemini，也可以配置为其他兼容的API服务
+# 示例：
+# - Google Gemini: https://generativelanguage.googleapis.com
+# - OpenAI: https://api.openai.com
+# - 自定义API: https://your-custom-api.com
+VITE_API_BASE_URL=https://generativelanguage.googleapis.com
+
+# 模型名称 - 可配置
+# 根据API提供商选择相应的模型
+# 示例：
+# - Google Gemini: gemini-2.5-flash-image-preview
+# - OpenAI: dall-e-3
+# - 自定义模型: your-custom-model
+VITE_MODEL_NAME=gemini-2.5-flash-image-preview
+
+# ===============================
+# 其他提供商配置示例
+# ===============================
+
+# === OpenAI 配置 ===
+# VITE_API_BASE_URL=https://api.openai.com
+# VITE_GEMINI_API_KEY=your_openai_api_key_here
+# VITE_MODEL_NAME=dall-e-3
+
+# === Azure OpenAI 配置 ===
+# VITE_API_BASE_URL=https://your-resource.openai.azure.com
+# VITE_GEMINI_API_KEY=your_azure_api_key_here
+# VITE_MODEL_NAME=your_deployment_name
+
+# === Comet API 代理服务 ===
+# VITE_API_BASE_URL=https://api.cometapi.com
+# VITE_GEMINI_API_KEY=sk-your-comet-api-key
+# VITE_MODEL_NAME=gemini-2.5-flash-image-preview
+
+# === 自定义API提供商 ===
+# VITE_API_BASE_URL=https://your-api-provider.com
+# VITE_GEMINI_API_KEY=your_custom_api_key
+# VITE_MODEL_NAME=your_custom_model
+
+# === 本地开发API ===
+# VITE_API_BASE_URL=http://localhost:8000
+# VITE_GEMINI_API_KEY=local_dev_key
+# VITE_MODEL_NAME=local_model
+
+# ===============================
+# 注意事项
+# ===============================
+# 1. 生产环境建议通过后端代理API调用以保护密钥安全
+# 2. 不同API提供商的请求格式可能有差异，系统会自动适配
+# 3. 请确保API密钥有足够的权限和配额
