--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "nano-banana-editor",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "AI图像生成与编辑平台，使用Google Gemini 2.5 Flash Image模型",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-config": "node check-config.mjs",
+    "test-config": "node test-config.js",
+    "start": "npm run check-config && npm run dev"
   },
   "dependencies": {
     "@google/genai": "^1.16.0",
